--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://shaif-ali-javad.github.io/reactjs/",
+  "homepage": "https://github.com/shaif-ali-javad/interview-reactjs/",
   "name": "reactjs",
   "private": true,
   "version": "0.0.0",
